Release notes for OpenLava versions

4.0beta1
========
-- Fix a fairshare bug in which jobs were not running under the correct
   user group if bsub -G was specified.
-- Deleted warning message if mbatchd cannot find lsb.resources file.
   lsb.resources is optional.
-- Updated lsb.resources man page for supported use case.
-- Fixed binding incorrect cpus to a queue when HOSTS_SHARES is configured
   in lsb.queues.
-- Enlarge the -J option for the job name to be at least 4096 characters.
-- Added support for binding multiple slots to a core by introducing HOSTS_SHARES
   parameter in lsb.queues for specifying the number of shares the queue is
   allocated for particular host/hostgroup. The share represents the proportion of
   the total number of cores on a host that will be allocated to the queue.
-- Updated non-numa cpu binding feature to support binding multiple
   cores to a job.
-- Added slot limit per host for specific queues in lsb.resources.
-- Added lsb.params PREEMPTABLE_RESOURCES parameters. This enable resource
   preemption in MBD If this parameter is configured the queue preemption
   is done based on the specified resources and not by the host slots which is
   the default.
-- Added the blaunch.1 man page in the batch man section.
-- Developed new API ls_getrpid() to get a remote process id of a task
   started by RES knowing the local taskid.
-- Developed new API lsb_launch() to start a components of parallel jobs.
   This API also collects resource usage of the remote tasks and reports
   the to OpenLava so they can be displayed with the bjobs command.
-- Developed the blaunch command, if mpiexec/mpirun is integrated with
   blaunch, it can launch mpi parallel application, or it can launch
   home grown parallel applications. It is a wrapper around the lsb_launch()
   API.
-- In the bootstrap.sh file create the revision number file
   which is going to be installed in the etc directory.
-- Create lsid 4.0dev4 output.

4.0pre3
=======
